[tool.poetry]
name = "proxy-py"
version = "0.1.0"
description = "proxy collector on python"
authors = ["DevAlone"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fake-useragent = "^1.5.1"
Jinja2 = "^3.1.3"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^2.0.0"
Sphinx = "^7.3.7"
py-mini-racer = "^0.6.0"
termcolor = "^2.4.0"
uvloop = "^0.19.0"
geoip2 = "^4.8.0"
bs4 = "^0.0.2"
aiohttp = "^3.9.5"
aiohttp-jinja2 = "^1.6"
peewee = "^3.17.3"
peewee-async = "^0.10.0"
aiopg = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
